--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
+	<meta name="author" content="Joppe Koops">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<title>Howdy FED2223</title>
@@ -13,7 +13,73 @@
 </head>
 
 <body>
-	<h1>Howdy FED2223</h1>
+
+	<header>
+		<a href="#" title="start pagina"><img src="images/ikea-logo.svg" alt=""></a>
+		<nav>
+			<ul>
+				<li><a href="#" title="account"><img src="images/account.svg" alt=""></a></li>
+				<li><a href="#" title="favorieten"><img src="images/favorieten.svg" alt=""></a></li>
+				<li><a href="#" title="winkelwagen"><img src="images/winkelwagen.svg" alt=""></a></li>
+				<li><button title="hamburger menu"><img src="images/hamburger.svg" alt=""></button></li>
+			</ul>
+		</nav>
+		<input type="search" placeholder="Waar ben je naar op zoek?">
+	</header>
+
+	<main>
+		<ol>
+			<li><a href="">Producten</a></li>
+		</ol>
+
+		<h1>Decoratie</h1>
+		<ul>
+			<li><a href="#section-1"><img src="images/arrow-right.svg" alt="">Sla lijst over</a></li>
+			<li><a href="#"><img src="images/wanddecoratie.webp" alt="">Wanddecoratie</a></li>
+			<li><a href="#"><img src="images/bloemen-en-planten.webp" alt="">Bloemen & planten</a></li>
+			<li><a href="#"><img src="images/dozen-en-manden.webp" alt="">Dozen & manden</a></li>
+			<li><a href="#"><img src="images/bloempotten.webp" alt="">Bloempotten</a></li>
+			<li><a href="#"><img src="images/spiegels.webp" alt="">Spiegels</a></li>
+			<li><a href="#"><img src="images/kaarshouders-en-kaarsen.webp" alt="">Kaarshouders & kaarsen</a></li>
+			<li><a href="#"><img src="images/vazen-en-schalen.webp" alt="">Vazen & schalen</a></li>
+			<li><a href="#"><img src="images/memo-en-prikborden.webp" alt="">Memo- & prikborden</a></li>
+			<li><a href="#"><img src="images/decoratieve-accessiores.webp" alt="">Decoratieve accessiores</a></li>
+			<li><a href="#"><img src="images/inpakpapier-en-kantoorartikelen.webp" alt="">Inpakpapier & kantoorartikelen</a></li>
+			<li><a href="#"><img src="images/klokken.webp" alt="">Klokken</a></li>
+			<li><a href="#"><img src="images/geurstokjes-en-potpourri.webp" alt="">Geurstokjes & potpourri</a></li>
+		</ul>
+
+		<section id="section-1">
+			<h2>Je woonstijl met favoriete decoratie.</h2>
+			<p>Thuis kom je tot rust, een plek waar je jezelf kan zijn. En waar je je eigen tempo bepaalt. Maak het gezellig en creëer ruimte voor nieuwe gewoontes. Omring je met je favoriete decoratie. Geurende kaarsen, extra kussens en een fijn kleed. Kies voor landelijke decoratie van natuurlijke materialen of ga voor stoere woonaccessoires met een print. Jij bepaalt je eigen ritme, je eigen woonstijl.</p>
+
+			<section id="gallery-1">
+				<article><img src="images/decoratie1.webp" alt=""></article>
+				<article><img src="images/decoratie2.webp" alt=""></article>
+				<article><img src="images/decoratie4.webp" alt=""></article>
+				<article><img src="images/decoratie3.webp" alt=""></article>
+				<article><img src="images/decoratie5.webp" alt=""></article>
+			</section>
+
+			<ul>
+				<li><a href="#section-2"><img src="images/arrow-right.svg" alt="">Sla lijst over</a></li>
+				<li><img src="images/vloerkleden.webp" alt=""><a href="">Vloerkleden</a></li>
+				<li><img src="images/kussens.webp" alt=""><a href="">Kussens</a></li>
+				<li><img src="images/verlichting.webp" alt=""><a href="">Verlichting</a></li>
+				<li><img src="images/spiegels2.webp" alt=""><a href="">Spiegels</a></li>
+				<li><img src="images/gordijnen.webp" alt=""><a href="">Gordijnen</a></li>
+			</ul>
+		</section>
+
+		<hr>
+
+		<section id="section-2">
+			<h2>Haal de natuur binnen met decoratie</h2>
+			<p>Van vazen tot bloempotten. Van kussens tot wanddecoratie. Haal de natuur naar binnen met groene decoratie en natuurlijke materialen voor meer frisheid en harmonie. Of zorg juist voor meer rust in je huis met planten en bloemen. Bepaal je eigen ritme en breng je eigen stijl tot leven met de woondecoratie van IKEA.</p>
+		</section>
+	</main>
+
+	<footer></footer>
 
 	<script defer src="scripts/script.js"></script>
 </body>
