--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
-<body>
+<body class="decoratie">
 
 	<header>
 		<a href="#" title="start pagina"><img src="images/ikea-logo.svg" alt=""></a>
@@ -24,7 +24,7 @@
 				<li><button title="hamburger menu"><img src="images/hamburger.svg" alt=""></button></li>
 			</ul>
 		</nav>
-		<input type="search" placeholder="Waar ben je naar op zoek?">
+		<form><input type="search" placeholder="Waar ben je naar op zoek?"><input type="submit" value=""></form>
 	</header>
 
 	<main>
@@ -33,7 +33,7 @@
 		</ol>
 
 		<h1>Decoratie</h1>
-		<ul>
+		<ul aria-label="decoratie subcategorieën">
 			<li><a href="#section-1"><img src="images/arrow-right.svg" alt="">Sla lijst over</a></li>
 			<li><a href="#"><img src="images/wanddecoratie.webp" alt="">Wanddecoratie</a></li>
 			<li><a href="#"><img src="images/bloemen-en-planten.webp" alt="">Bloemen & planten</a></li>
@@ -53,13 +53,13 @@
 			<h2>Je woonstijl met favoriete decoratie.</h2>
 			<p>Thuis kom je tot rust, een plek waar je jezelf kan zijn. En waar je je eigen tempo bepaalt. Maak het gezellig en creëer ruimte voor nieuwe gewoontes. Omring je met je favoriete decoratie. Geurende kaarsen, extra kussens en een fijn kleed. Kies voor landelijke decoratie van natuurlijke materialen of ga voor stoere woonaccessoires met een print. Jij bepaalt je eigen ritme, je eigen woonstijl.</p>
 
-			<section id="gallery-1">
-				<article><img src="images/decoratie1.webp" alt=""></article>
-				<article><img src="images/decoratie2.webp" alt=""></article>
-				<article><img src="images/decoratie4.webp" alt=""></article>
-				<article><img src="images/decoratie3.webp" alt=""></article>
-				<article><img src="images/decoratie5.webp" alt=""></article>
-			</section>
+			<ul id="gallery-1">
+				<li><img src="images/decoratie1.webp" alt=""></li>
+				<li><img src="images/decoratie2.webp" alt=""></li>
+				<li><img src="images/decoratie4.webp" alt=""></li>
+				<li><img src="images/decoratie3.webp" alt=""></li>
+				<li><img src="images/decoratie5.webp" alt=""></li>
+			</ul>
 
 			<ul>
 				<li><a href="#section-2"><img src="images/arrow-right.svg" alt="">Sla lijst over</a></li>
