--- a/index.html
+++ b/index.html
@@ -21,7 +21,28 @@
 				<li><a href="#" title="account"><img src="images/account.svg" alt=""></a></li>
 				<li><a href="#" title="favorieten"><img src="images/favorieten.svg" alt=""></a></li>
 				<li><a href="#" title="winkelwagen"><img src="images/winkelwagen.svg" alt=""></a></li>
-				<li><button title="hamburger menu"><img src="images/hamburger.svg" alt=""></button></li>
+				<li><button title="open navigatie"><img src="images/hamburger.svg" alt=""></button></li>
+			</ul>
+		</nav>
+		<nav>
+			<a href="#" title="start pagina"><img src="images/ikea-logo.svg" alt=""></a>
+			<button><img src="images/close.svg" alt=""></button>
+			<a href="#"><img src="images/account.svg" alt="">Hej, log in of meld je aan</a>
+			<ul>
+				<li><a href="">Producten</a></li>
+				<li><a href="">Ruimte</a></li>
+				<li><a href="">Nieuw</a></li>
+				<li><a href="">Aanbiedingen</a></li>
+			</ul>
+
+			<ul>
+				<li><a href="">IKEA Family</a></li>
+				<li><a href="">IKEA Winkels</a></li>
+				<li><a href="">Zweeds restaurant</a></li>
+				<li><a href="">Werken bij IKEA</a></li>
+				<li><a href="">Wooninspiratie</a></li>
+				<li><a href="">Klantenservice</a></li>
+				<li><a href="">IKEA for business</a></li>
 			</ul>
 		</nav>
 		<form><input type="search" placeholder="Waar ben je naar op zoek?"><input type="submit" value=""></form>
