--- a/planten.html
+++ b/planten.html
@@ -19,9 +19,30 @@
 		<nav>
 			<ul>
 				<li><a href="#" title="account"><img src="images/account.svg" alt=""></a></li>
-				<li><a href="#" title="favorieten"><img src="images/favorieten.svg" alt=""></a></li>
-				<li><a href="#" title="winkelwagen"><img src="images/winkelwagen.svg" alt=""></a></li>
-				<li><button title="hamburger menu"><img src="images/hamburger.svg" alt=""></button></li>
+				<li><a href="#" title="favorieten" class="favorieten"><span>0</span><img src="images/favorieten.svg" alt=""></a></li>
+				<li><a href="#" title="winkelwagen" class="winkelwagen"><span>0</span><img src="images/winkelwagen.svg" alt=""></a></li>
+				<li><button title="open navigatie"><img src="images/hamburger.svg" alt=""></button></li>
+			</ul>
+		</nav>
+		<nav>
+			<a href="#" title="start pagina"><img src="images/ikea-logo.svg" alt=""></a>
+			<button><img src="images/close.svg" alt=""></button>
+			<a href="#"><img src="images/account.svg" alt="">Hej, log in of meld je aan</a>
+			<ul>
+				<li><a href="">Producten</a></li>
+				<li><a href="">Ruimte</a></li>
+				<li><a href="">Nieuw</a></li>
+				<li><a href="">Aanbiedingen</a></li>
+			</ul>
+
+			<ul>
+				<li><a href="">IKEA Family</a></li>
+				<li><a href="">IKEA Winkels</a></li>
+				<li><a href="">Zweeds restaurant</a></li>
+				<li><a href="">Werken bij IKEA</a></li>
+				<li><a href="">Wooninspiratie</a></li>
+				<li><a href="">Klantenservice</a></li>
+				<li><a href="">IKEA for business</a></li>
 			</ul>
 		</nav>
 		<form><input type="search" placeholder="Waar ben je naar op zoek?"><input type="submit" value=""></form>
@@ -59,8 +80,8 @@
 					<img src="images/fejka.webp" alt="fejka plant">
 					<p>Kunstplant, 9cm</p>
 					<p>€<span>6</span>.99</p>
-					<button><img src="images/buy-icon.svg" alt="" aria-label="voeg toe aan winkelwagen"></button>
-					<button><img src="images/like-icon.svg" alt="" aria-label="voeg toe aan favorieten"></button>
+					<button class="buy"><img src="images/buy-icon.svg" alt="" aria-label="voeg toe aan winkelwagen"></button>
+					<button class="like"><img src="images/like-icon.svg" alt="" aria-label="voeg toe aan favorieten"></button>
 					<p>Beschikbaar voor levering</p>
 					<p>Op voorraad</p>
 				</li>
@@ -69,8 +90,8 @@
 					<img src="images/monstera-deliciosa.webp" alt="fejka plant">
 					<p>Potplant, 12cm</p>
 					<p>€<span>4</span>.99</p>
-					<button><img src="images/buy-icon.svg" alt="" aria-label="voeg toe aan winkelwagen"></button>
-					<button><img src="images/like-icon.svg" alt="" aria-label="voeg toe aan favorieten"></button>
+					<button class="buy"><img src="images/buy-icon.svg" alt="" aria-label="voeg toe aan winkelwagen"></button>
+					<button class="like"><img src="images/like-icon.svg" alt="" aria-label="voeg toe aan favorieten"></button>
 					<p>Beschikbaar voor levering</p>
 					<p>Op voorraad</p>
 				</li>
@@ -79,8 +100,8 @@
 					<img src="images/strelitzia.webp" alt="fejka plant">
 					<p>Potplant, 27cm</p>
 					<p>€<span>59</span>.99</p>
-					<button><img src="images/buy-icon.svg" alt="" aria-label="voeg toe aan winkelwagen"></button>
-					<button><img src="images/like-icon.svg" alt="" aria-label="voeg toe aan favorieten"></button>
+					<button class="buy"><img src="images/buy-icon.svg" alt="" aria-label="voeg toe aan winkelwagen"></button>
+					<button class="like"><img src="images/like-icon.svg" alt="" aria-label="voeg toe aan favorieten"></button>
 					<p>Beschikbaar voor levering</p>
 					<p>Op voorraad</p>
 				</li>
@@ -89,13 +110,14 @@
 					<img src="images/dypsis-lutescens.webp" alt="fejka plant">
 					<p>Potplant, 24cm</p>
 					<p>€<span>24</span>.99</p>
-					<button><img src="images/buy-icon.svg" alt="" aria-label="voeg toe aan winkelwagen"></button>
-					<button><img src="images/like-icon.svg" alt="" aria-label="voeg toe aan favorieten"></button>
+					<button class="buy"><img src="images/buy-icon.svg" alt="" aria-label="voeg toe aan winkelwagen"></button>
+					<button class="like"><img src="images/like-icon.svg" alt="" aria-label="voeg toe aan favorieten"></button>
 					<p>Beschikbaar voor levering</p>
 					<p>Op voorraad</p>
 				</li>
 			</ul>
 		</section>
 	</main>
+	<script defer src="scripts/script.js"></script>
 </body>
 </html>
