--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 				<li><a href="">IKEA for business</a></li>
 			</ul>
 		</nav>
-		<form><input type="search" placeholder="Waar ben je naar op zoek?"><input type="submit" value=""></form>
+		<form><input type="search" placeholder="Waar ben je naar op zoek?"><input type="submit" value="" title="zoeken"></form>
 	</header>
 
 	<main>
-		<ol>
-			<li><a href="">Producten</a></li>
+		<ol aria-label="">
+			<li><a href="#">Producten</a></li>
 		</ol>
 
 		<h1>Decoratie</h1>
