--- a/planten.html
+++ b/planten.html
@@ -45,7 +45,7 @@
 				<li><a href="">IKEA for business</a></li>
 			</ul>
 		</nav>
-		<form><input type="search" placeholder="Waar ben je naar op zoek?"><input type="submit" value=""></form>
+		<form><input type="search" placeholder="Waar ben je naar op zoek?"><input type="submit" value="" title="zoeken"></form>
 	</header>
 
 	<main>
@@ -80,38 +80,38 @@
 					<img src="images/fejka.webp" alt="fejka plant">
 					<p>Kunstplant, 9cm</p>
 					<p>€<span>6</span>.99</p>
-					<button class="buy"><img src="images/buy-icon.svg" alt="" aria-label="voeg toe aan winkelwagen"></button>
-					<button class="like"><img src="images/like-icon.svg" alt="" aria-label="voeg toe aan favorieten"></button>
+					<button class="buy" title="voeg toe aan winkelwagen"><img aria-hidden src="images/buy-icon.svg" alt="" ></button>
+					<button class="like" title="voeg toe aan favorieten"><img aria-hidden src="images/like-icon.svg" alt=""></button>
 					<p>Beschikbaar voor levering</p>
 					<p>Op voorraad</p>
 				</li>
 				<li>
 					<a href="#"><h3>Monstera Deliciosa</h3></a>
-					<img src="images/monstera-deliciosa.webp" alt="fejka plant">
+					<img src="images/monstera-deliciosa.webp" alt="monstera deliciosa plant">
 					<p>Potplant, 12cm</p>
 					<p>€<span>4</span>.99</p>
-					<button class="buy"><img src="images/buy-icon.svg" alt="" aria-label="voeg toe aan winkelwagen"></button>
-					<button class="like"><img src="images/like-icon.svg" alt="" aria-label="voeg toe aan favorieten"></button>
+					<button class="buy" title="voeg toe aan winkelwagen"><img aria-hidden src="images/buy-icon.svg" alt="" ></button>
+					<button class="like" title="voeg toe aan favorieten"><img aria-hidden src="images/like-icon.svg" alt=""></button>
 					<p>Beschikbaar voor levering</p>
 					<p>Op voorraad</p>
 				</li>
 				<li>
 					<a href="#"><h3>Strelitzia</h3></a>
-					<img src="images/strelitzia.webp" alt="fejka plant">
+					<img src="images/strelitzia.webp" alt="strelitzia plant">
 					<p>Potplant, 27cm</p>
 					<p>€<span>59</span>.99</p>
-					<button class="buy"><img src="images/buy-icon.svg" alt="" aria-label="voeg toe aan winkelwagen"></button>
-					<button class="like"><img src="images/like-icon.svg" alt="" aria-label="voeg toe aan favorieten"></button>
+					<button class="buy" title="voeg toe aan winkelwagen"><img aria-hidden src="images/buy-icon.svg" alt="" ></button>
+					<button class="like" title="voeg toe aan favorieten"><img aria-hidden src="images/like-icon.svg" alt=""></button>
 					<p>Beschikbaar voor levering</p>
 					<p>Op voorraad</p>
 				</li>
 				<li>
 					<a href="#"><h3>Dypsis Lutescens</h3></a>
-					<img src="images/dypsis-lutescens.webp" alt="fejka plant">
+					<img src="images/dypsis-lutescens.webp" alt="dypsis lutescens plant">
 					<p>Potplant, 24cm</p>
 					<p>€<span>24</span>.99</p>
-					<button class="buy"><img src="images/buy-icon.svg" alt="" aria-label="voeg toe aan winkelwagen"></button>
-					<button class="like"><img src="images/like-icon.svg" alt="" aria-label="voeg toe aan favorieten"></button>
+					<button class="buy" title="voeg toe aan winkelwagen"><img aria-hidden src="images/buy-icon.svg" alt="" ></button>
+					<button class="like" title="voeg toe aan favorieten"><img aria-hidden src="images/like-icon.svg" alt=""></button>
 					<p>Beschikbaar voor levering</p>
 					<p>Op voorraad</p>
 				</li>
