--- a/planten.html
+++ b/planten.html
@@ -80,8 +80,8 @@
 					<img src="images/fejka.webp" alt="fejka plant">
 					<p>Kunstplant, 9cm</p>
 					<p>€<span>6</span>.99</p>
-					<button class="buy" title="voeg toe aan winkelwagen"><img aria-hidden src="images/buy-icon.svg" alt="" ></button>
-					<button class="like" title="voeg toe aan favorieten"><img aria-hidden src="images/like-icon.svg" alt=""></button>
+					<button class="buy" title="voeg toe aan winkelwagen"><img src="images/buy-icon.svg" alt="" ></button>
+					<button class="like" title="voeg toe aan favorieten"><img src="images/like-icon.svg" alt=""></button>
 					<p>Beschikbaar voor levering</p>
 					<p>Op voorraad</p>
 				</li>
@@ -90,8 +90,8 @@
 					<img src="images/monstera-deliciosa.webp" alt="monstera deliciosa plant">
 					<p>Potplant, 12cm</p>
 					<p>€<span>4</span>.99</p>
-					<button class="buy" title="voeg toe aan winkelwagen"><img aria-hidden src="images/buy-icon.svg" alt="" ></button>
-					<button class="like" title="voeg toe aan favorieten"><img aria-hidden src="images/like-icon.svg" alt=""></button>
+					<button class="buy" title="voeg toe aan winkelwagen"><img src="images/buy-icon.svg" alt="" ></button>
+					<button class="like" title="voeg toe aan favorieten"><img src="images/like-icon.svg" alt=""></button>
 					<p>Beschikbaar voor levering</p>
 					<p>Op voorraad</p>
 				</li>
@@ -100,8 +100,8 @@
 					<img src="images/strelitzia.webp" alt="strelitzia plant">
 					<p>Potplant, 27cm</p>
 					<p>€<span>59</span>.99</p>
-					<button class="buy" title="voeg toe aan winkelwagen"><img aria-hidden src="images/buy-icon.svg" alt="" ></button>
-					<button class="like" title="voeg toe aan favorieten"><img aria-hidden src="images/like-icon.svg" alt=""></button>
+					<button class="buy" title="voeg toe aan winkelwagen"><img src="images/buy-icon.svg" alt="" ></button>
+					<button class="like" title="voeg toe aan favorieten"><img src="images/like-icon.svg" alt=""></button>
 					<p>Beschikbaar voor levering</p>
 					<p>Op voorraad</p>
 				</li>
@@ -110,8 +110,8 @@
 					<img src="images/dypsis-lutescens.webp" alt="dypsis lutescens plant">
 					<p>Potplant, 24cm</p>
 					<p>€<span>24</span>.99</p>
-					<button class="buy" title="voeg toe aan winkelwagen"><img aria-hidden src="images/buy-icon.svg" alt="" ></button>
-					<button class="like" title="voeg toe aan favorieten"><img aria-hidden src="images/like-icon.svg" alt=""></button>
+					<button class="buy" title="voeg toe aan winkelwagen"><img src="images/buy-icon.svg" alt="" ></button>
+					<button class="like" title="voeg toe aan favorieten"><img src="images/like-icon.svg" alt=""></button>
 					<p>Beschikbaar voor levering</p>
 					<p>Op voorraad</p>
 				</li>
