--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		</nav>
 		<nav>
 			<a href="#" title="start pagina"><img src="images/ikea-logo.svg" alt=""></a>
-			<button>
+			<button title="sluit navigatie">
 				<svg focusable="false" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
    					<path fill-rule="evenodd" clip-rule="evenodd" d="m11.9997 13.4149 4.9498 4.9497 1.4142-1.4142-4.9498-4.9497 4.9498-4.9498-1.4142-1.4142-4.9498 4.9498L7.05 5.6367 5.6357 7.051l4.9498 4.9498-4.9497 4.9497L7.05 18.3646l4.9497-4.9497z"></path>
   				</svg>
@@ -75,8 +75,8 @@
 	</header>
 
 	<main>
-		<ol aria-label="">
-			<li><a href="#">Producten</a></li>
+		<ol aria-label="breadcrumbs">
+			<li><a aria-current="page" href="#">Producten</a></li>
 		</ol>
 
 		<h1>Decoratie</h1>
