--- a/planten.html
+++ b/planten.html
@@ -15,25 +15,26 @@
 <body class="planten">
 
 	<header>
-		<a href="#" title="start pagina"><img src="images/ikea-logo.svg" alt=""></a>
+		<a href="index.html" title="start pagina"><img src="images/ikea-logo.svg" alt=""></a>
 		<nav>
 			<ul>
-				<li><a href="#" title="account">
+				<li><a href="index.html" title="account">
 					<svg focusable="false" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
    						<path fill-rule="evenodd" clip-rule="evenodd" d="M10.6724 6.4678c.2734-.2812.6804-.4707 1.3493-.4707.3971 0 .705.0838.9529.2225.241.1348.4379.3311.5934.6193l.0033.006c.1394.2541.237.6185.237 1.1403 0 .7856-.2046 1.2451-.4796 1.5278l-.0048.005c-.2759.2876-.679.4764-1.334.4764-.3857 0-.6962-.082-.956-.2241-.2388-.1344-.4342-.3293-.5888-.6147-.1454-.275-.2419-.652-.2419-1.1704 0-.7902.2035-1.2442.4692-1.5174zm1.3493-2.4717c-1.0834 0-2.054.3262-2.7838 1.0766-.7376.7583-1.0358 1.781-1.0358 2.9125 0 .7656.1431 1.483.4773 2.112l.0031.0058c.3249.602.785 1.084 1.3777 1.4154l.0062.0035c.5874.323 1.2368.4736 1.9235.4736 1.0818 0 2.0484-.3333 2.7755-1.0896.7406-.7627 1.044-1.786 1.044-2.9207 0-.7629-.1421-1.4784-.482-2.0996-.3247-.6006-.7844-1.0815-1.376-1.4125-.5858-.3276-1.2388-.477-1.9297-.477zM6.4691 16.8582c.2983-.5803.7228-1.0273 1.29-1.3572.5582-.3191 1.2834-.5049 2.2209-.5049h4.04c.9375 0 1.6626.1858 2.2209.5049.5672.3299.9917.7769 1.29 1.3572.3031.5896.4691 1.2936.4691 2.1379v1h2v-1c0-1.1122-.2205-2.1384-.6904-3.0523a5.3218 5.3218 0 0 0-2.0722-2.1769c-.9279-.5315-2.0157-.7708-3.2174-.7708H9.98c-1.1145 0-2.2483.212-3.2225.7737-.8982.5215-1.5928 1.2515-2.0671 2.174C4.2205 16.8577 4 17.8839 4 18.9961v1h2v-1c0-.8443.166-1.5483.4691-2.1379z"></path>
 					</svg>
 				</a></li>
-				<li><a href="#" title="favorieten" class="favorieten">
+				<li><a href="index.html" title="favorieten" class="favorieten">
 					<span>0</span>
 					<svg focusable="false" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 						<path fill-rule="evenodd" clip-rule="evenodd" d="M19.205 5.599c.9541.954 1.4145 2.2788 1.4191 3.6137 0 3.0657-2.2028 5.7259-4.1367 7.5015-1.2156 1.1161-2.5544 2.1393-3.9813 2.9729L12 20.001l-.501-.3088c-.9745-.5626-1.8878-1.2273-2.7655-1.9296-1.1393-.9117-2.4592-2.1279-3.5017-3.5531-1.0375-1.4183-1.8594-3.1249-1.8597-4.9957-.0025-1.2512.3936-2.5894 1.419-3.6149 1.8976-1.8975 4.974-1.8975 6.8716 0l.3347.3347.336-.3347c1.8728-1.8722 4.9989-1.8727 6.8716 0zm-7.2069 12.0516c.6695-.43 1.9102-1.2835 3.1366-2.4096 1.8786-1.7247 3.4884-3.8702 3.4894-6.0264-.0037-.849-.2644-1.6326-.8333-2.2015-1.1036-1.1035-2.9413-1.0999-4.0445.0014l-1.7517 1.7448-1.7461-1.7462c-1.1165-1.1164-2.9267-1.1164-4.0431 0-1.6837 1.6837-.5313 4.4136.6406 6.0156.8996 1.2298 2.0728 2.3207 3.137 3.1722a24.3826 24.3826 0 0 0 2.0151 1.4497z"></path>
 				  </svg>
 				</a></li>
-				<li><a href="#" title="winkelwagen" class="winkelwagen">
+				<li><a href="index.html" title="winkelwagen" class="winkelwagen">
 					<span>0</span>
 					<svg focusable="false" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 						<path fill-rule="evenodd" clip-rule="evenodd" d="M10.9994 4h-.5621l-.2922.4802-3.357 5.517h-5.069l.3107 1.2425 1.6212 6.4851c.334 1.3355 1.5339 2.2724 2.9105 2.2724h10.8769c1.3766 0 2.5765-.9369 2.9104-2.2724l1.6213-6.4851.3106-1.2425h-5.0695l-3.3574-5.517L13.5618 4h-2.5624zm3.8707 5.9972L12.4376 6h-.8761L9.1292 9.9972h5.7409zm-9.2787 7.2425-1.3106-5.2425h15.4384l-1.3106 5.2425a1 1 0 0 1-.9701.7575H6.5615a1 1 0 0 1-.97-.7575z"></path>
 					</svg>
+					<div class="laser"></div>
 				</a></li>
 				<li><button title="open navigatie">
 					<svg focusable="false" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -43,13 +44,13 @@
 			</ul>
 		</nav>
 		<nav>
-			<a href="#" title="start pagina"><img src="images/ikea-logo.svg" alt=""></a>
+			<a href="index.html" title="start pagina"><img src="images/ikea-logo.svg" alt=""></a>
 			<button title="sluit navigatie">
 				<svg focusable="false" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
    					<path fill-rule="evenodd" clip-rule="evenodd" d="m11.9997 13.4149 4.9498 4.9497 1.4142-1.4142-4.9498-4.9497 4.9498-4.9498-1.4142-1.4142-4.9498 4.9498L7.05 5.6367 5.6357 7.051l4.9498 4.9498-4.9497 4.9497L7.05 18.3646l4.9497-4.9497z"></path>
   				</svg>
 			</button>
-			<a href="#">
+			<a href="index.html">
 				<svg focusable="false" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
    					<path fill-rule="evenodd" clip-rule="evenodd" d="M10.6724 6.4678c.2734-.2812.6804-.4707 1.3493-.4707.3971 0 .705.0838.9529.2225.241.1348.4379.3311.5934.6193l.0033.006c.1394.2541.237.6185.237 1.1403 0 .7856-.2046 1.2451-.4796 1.5278l-.0048.005c-.2759.2876-.679.4764-1.334.4764-.3857 0-.6962-.082-.956-.2241-.2388-.1344-.4342-.3293-.5888-.6147-.1454-.275-.2419-.652-.2419-1.1704 0-.7902.2035-1.2442.4692-1.5174zm1.3493-2.4717c-1.0834 0-2.054.3262-2.7838 1.0766-.7376.7583-1.0358 1.781-1.0358 2.9125 0 .7656.1431 1.483.4773 2.112l.0031.0058c.3249.602.785 1.084 1.3777 1.4154l.0062.0035c.5874.323 1.2368.4736 1.9235.4736 1.0818 0 2.0484-.3333 2.7755-1.0896.7406-.7627 1.044-1.786 1.044-2.9207 0-.7629-.1421-1.4784-.482-2.0996-.3247-.6006-.7844-1.0815-1.376-1.4125-.5858-.3276-1.2388-.477-1.9297-.477zM6.4691 16.8582c.2983-.5803.7228-1.0273 1.29-1.3572.5582-.3191 1.2834-.5049 2.2209-.5049h4.04c.9375 0 1.6626.1858 2.2209.5049.5672.3299.9917.7769 1.29 1.3572.3031.5896.4691 1.2936.4691 2.1379v1h2v-1c0-1.1122-.2205-2.1384-.6904-3.0523a5.3218 5.3218 0 0 0-2.0722-2.1769c-.9279-.5315-2.0157-.7708-3.2174-.7708H9.98c-1.1145 0-2.2483.212-3.2225.7737-.8982.5215-1.5928 1.2515-2.0671 2.174C4.2205 16.8577 4 17.8839 4 18.9961v1h2v-1c0-.8443.166-1.5483.4691-2.1379z"></path>
 				</svg>
@@ -83,10 +84,10 @@
 		<h1>Bloemen en Planten</h1>
 		<ul aria-label="bloemen en planten subcategorieën">
 			<li><a href="#products"><img src="images/arrow-right.svg" alt="">Sla lijst over</a></li>
-			<li><a href="#"><img src="images/kweekaccessoires.webp" alt="">Kweekaccessiores</a></li>
-			<li><a href="#"><img src="images/kunstplanten-en-kunstbloemen.webp" alt="">Kunstplanten & kunstbloemen</a></li>
-			<li><a href="#"><img src="images/kamerplanten.webp" alt="">Kamerplanten</a></li>
-			<li><a href="#"><img src="images/droogbloemen.webp" alt="">Droogbloemen</a></li>
+			<li><a href="index.html"><img src="images/kweekaccessoires.webp" alt="">Kweekaccessiores</a></li>
+			<li><a href="index.html"><img src="images/kunstplanten-en-kunstbloemen.webp" alt="">Kunstplanten & kunstbloemen</a></li>
+			<li><a href="index.html"><img src="images/kamerplanten.webp" alt="">Kamerplanten</a></li>
+			<li><a href="index.html"><img src="images/droogbloemen.webp" alt="">Droogbloemen</a></li>
 		</ul>
 		<p>Haal de natuur naar binnen. Lekker rustgevend. Bloemen en planten fleuren bovendien in een oogwenk je hele huis op. Geef elke ruimte een frisse, groene en levendige uitstraling met verschillende soorten kamerplanten, droogbloemen, kunstplanten en kunstbloemen.</p>
 
@@ -102,7 +103,7 @@
 			</ul>
 			<ul>
 				<li>
-					<a href="#"><h3>Fejka</h3></a>
+					<a href="index.html"><h3>Fejka</h3></a>
 					<img src="images/fejka.webp" alt="fejka plant">
 					<p>Kunstplant, 9cm</p>
 					<p>€<span>6</span>.99</p>
@@ -112,7 +113,7 @@
 					<p>Op voorraad</p>
 				</li>
 				<li>
-					<a href="#"><h3>Monstera Deliciosa</h3></a>
+					<a href="index.html"><h3>Monstera Deliciosa</h3></a>
 					<img src="images/monstera-deliciosa.webp" alt="monstera deliciosa plant">
 					<p>Potplant, 12cm</p>
 					<p>€<span>4</span>.99</p>
@@ -123,7 +124,7 @@
 
 				</li>
 				<li>
-					<a href="#"><h3>Strelitzia</h3></a>
+					<a href="index.html"><h3>Strelitzia</h3></a>
 					<img src="images/strelitzia.webp" alt="strelitzia plant">
 					<p>Potplant, 27cm</p>
 					<p>€<span>59</span>.99</p>
@@ -133,7 +134,7 @@
 					<p>Op voorraad</p>
 				</li>
 				<li>
-					<a href="#"><h3>Dypsis Lutescens</h3></a>
+					<a href="index.html"><h3>Dypsis Lutescens</h3></a>
 					<img src="images/dypsis-lutescens.webp" alt="dypsis lutescens plant">
 					<p>Potplant, 24cm</p>
 					<p>€<span>24</span>.99</p>
